// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`col.vue matches snapshot 1`] = `
<div
  class="on-col"
>
  
  
</div>
`;

exports[`col.vue valid props 1`] = `
<div
  class="on-col-sm-12 on-col-12"
>
  
  
</div>
`;
